--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -24,4 +24,6 @@
     \input{Ejercicios_Clase_3.tex}
     \newpage
     \input{Ejercicios_Clase_4.tex}
+    \newpage
+    \input{Ejercicios_Clase_5.tex}
 \end{document}
