--- a/documents/Topología_I/main.tex
+++ b/documents/Topología_I/main.tex
@@ -3,6 +3,10 @@
 \input{../_assets/preambulo.tex}
 \input{../_assets/portada.tex}
 
+\newcommand{\interior}[1]{
+    #1^\circ
+}
+
 \begin{document}
     \portada[%
         titulo=Topología I,
